--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 install: "npm install --no-optional"
 script:
   - "npm run lint"
-  - "npm test"
+  - "npm run test:coverage"
   #- "npm run test:hooks-handlers" # disabled because of https://github.com/apiaryio/dredd/issues/672
 after_success:
   - "npm run coveralls"
